css/styles.css
* {
  box-sizing: border-box;
}

html {
  color: #757575;
  font-family: Gotham, gotham, Verdana, sans-serif;
  font-size: 18px;
}

img {
  height: auto;
  width: 100%;
}

figure {
  width: 100%;
  margin: 0 auto;
}

a {
  color: #039be5;
  text-decoration: none;
}

a:hover {
  color: #039be5;
}

a:visited {
  color: #039be5;
}

p {
  color: #212121;
}

.container {
  display: grid;
  grid-template-areas:
    "header"
    "about"
    "projects"
    "footer";
  width: 100%;
  margin: 0 auto;
  justify-items: center;
}

.header {
  grid-area: header;
  position: fixed;
  width: 100%;
  display: grid;
  grid-template-areas:
    "logo name"
    "logo tag";
  grid-template-columns: 20% 80%;
  border-bottom: 1px solid #757575;
  justify-items: end;
  box-shadow: 0 4px 2px -2px gray;
  background-color: #fff;
}

.projects {
  grid-area: projects;
  grid-gap: 5px;
  display: grid;
  width: 100%;
  grid-template-areas:
    "software software"
    "project1 project2"
    "project3 project4"
    "project5 project6"
    "project7 project8";
    max-width: 1024px;
    grid-auto-columns: 1fr;
    background-color: #f7f7f7;
    padding: 8px;
    box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
    margin-bottom: 20px;
}

.sidenav {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: #fff;
  overflow-x: hidden;
  padding-top: 60px;
  transition: 0.5s;
  box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
}

.sidenav a {
  padding: 8px 8px 8px 16px;
  text-decoration: none;
  font-size: 1em;
  color: #818181;
  display: block;
  transition 0.5s;
}

.sidenav a:hover, .sidenav a:focus {
  color: #039be5;
}

.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 10px;
  font-size: 36px;
  margin-left: 50px;
}

.sidenav .closebtn:hover, .sidenav .closebtn:focus {
  color: #111;
}

.sidenav ul {
  list-style-type: none;
  font-size: 0.8em;
  padding: 0 0 0 24px;
}

.sidenav ul li {
  padding: 3px 0;
}

.software {
  grid-area: software;
  background-color: #f7f7f7;
}

.header__logo {
  grid-area: logo;
  height: auto;
  width: 100%;
  max-width: 90px;
  place-self: start;
}

.burger {
  font-size: 2.5em;
  color: #757575;
  justify-self: start;
  grid-area: logo;
  padding-left: 10px;
}

.burger:hover, .burguer:focus {
  color: #111;
}

.header__name {
  grid-area: name;
  font-size: 1.75em;
  font-weight: bold;
  color: rgba(0,0,0,.54);
  padding-right: 10px;
}

.header__tag {
  grid-area: tag;
  font-size: 0.8em;
  padding-right: 10px;
}

h1 {
  font-size: 1.5em;
  font-weight: bold;
  width: 100%;
}

h2 {
  font-size: .9em;
  text-align: center;
}

.about {
  grid-area: about;
  max-width: 1024px;
  background-color: #f7f7f7;
  margin: 76px 0 20px 0;
  padding: 8px;
  box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
}

.project1 {
 grid-area: project1;
 width: 100%;
 height: auto;
}

.project2 {
  grid-area: project2;
  width: 100%;
  height: auto;
}

.project3 {
  grid-area: project3;
  width: 100%;
  height: auto;
}

.project4 {
  grid-area: project4;
  width: 100%;
  height: auto;
}

.project5 {
  grid-area: project5;
  width: 100%;
  height: auto;
}

.project6 {
  grid-area: project6;
  width: 100%;
  height: auto;
}

.project7 {
  grid-area: project7;
  width: 100%;
  height: auto;
}

.project8 {
  grid-area: project8;
  width: 100%;
  height: auto;
}

.project-square {
  width: 100%;
  height: auto;
  color: white;
  text-align: center;
  vertical-align: middle;
}

.one {
  background-color: #ea4335;
}

.two {
  background-color: #4285f4;
}

.three {
  background-color: #ea4335;
}

.four {
  background-color: #34a853;
}

.five {
  background-color: #34a853;
}

.six {
  background-color: #fbbc05;
}

.seven {
  background-color: #4285f4;
}

.eight {
  background-color: #fbbc05;
}

.project-square span {
  width: 100%;
  height: auto;
  font-size: 8em;
  font-weight: bolder;
}

.footer {
  grid-area: footer;
}

.social-icon {
  height: 24px;
  width: 24px;
}

.twitter {
  background-color: black;
}

.footer ul {
  list-style-type: none;
}

.footer ul li {
  display: inline-block;
}

.copywrite p {
  margin: 5px auto;
}

.portrait {
  max-width: 300px;
  margin: 0 auto;
  border-radius: 50%;
  vertical-align: top;
  display: block;
}

/* tablet */
@media screen and (min-width: 640px ) {
  .projects {
    grid-template-areas:
      "software software software"
      "project1 project2 project3"
      "project4 project5 project6"
      "project7 project8 project9";
  }
  .header__name {
    font-size: 2em;
  }
  .header__tag {
    font-size: 1em;
  }
  .burger {
    font-size: 2.8em;
  }
  .portrait {
    padding: 0 10px 10px 0;
    float: left;
  }
}

/* desktop */
@media screen and (min-width: 1024px) {
  .container {
    margin: 0 auto;
  }
  .projects {
    grid-template-areas:
      "software software software software"
      "project1 project2 project3 project4"
      "project5 project6 project7 project8";
  }
  .header__logo {
    max-width: 120px;
  }
  .header__name {
    font-size: 2.5em;
  }
  .header__tag {
    font-size: 1.2em;
  }
  .burger {
    font-size: 3.7em;
  }
}

